--- a/YOLO.ipynb
+++ b/YOLO.ipynb
@@ -124,7 +124,6 @@
     "            # tâm của boundary box\n",
     "            x_center, y_center, w, h = (x1+x2)/2.0, (y1+y2)/2.0, x2-x1, y2-y1\n",
     "            \n",
-    "            # TODO \n",
     "            # tìm ô vuông trên matrix 7x7 mà tâm object thuộc về\n",
     "            x_idx, y_idx = int(x_center//(224/7)), int(y_center//(224/7))\n",
     "            # print(x_idx, y_idx)\n",
@@ -226,7 +225,6 @@
     "            net = slim.repeat(inputs, 2, slim.conv2d, 16, [3, 3], scope='conv1')\n",
     "            net = slim.max_pool2d(net, [2, 2], scope='pool1')\n",
     "            \n",
-    "            # TODO\n",
     "            # sử dụng slim.repeat  và slim.max_pool2d để định nghĩa phần còn lại của mô hình CNN\n",
     "            # lưu ý kích thước matrix output phải là [batch_size, 7, 7, 5*nbox + nclass]\n",
     "            # thay đổi số lượng tầng cũng như tham số để đạt kết quả iou trên tập valid > 0.92\n",
@@ -402,7 +400,7 @@
     "\n",
     "        noobject_mask = tf.ones_like(object_mask) - object_mask\n",
     "        \n",
-    "        ## TODO tính classification loss\n",
+    "        ## Tính classification loss\n",
     "        ## class_delta là độ chênh lệch so với nhãn trước khi bình phương, \n",
     "        ## lưu ý chỉ object_mask để ignore những box không quan tâm\n",
     "        class_delta = true_object * (predict_class - true_class)\n",
@@ -412,16 +410,16 @@
     "        ## object loss\n",
     "        object_delta = object_mask*(predict_object - predict_iou)\n",
     "        \n",
-    "        ## TODO tính object loss từ object_delta\n",
+    "        ## Tính object loss từ object_delta\n",
     "        object_loss = tf.reduce_mean(tf.reduce_sum(tf.square(object_delta), axis=[1, 2, 3]), name='object_loss')\n",
     "        \n",
-    "        ## TODO tính noobject loss\n",
+    "        ## Tính noobject loss\n",
     "        noobject_delta = noobject_mask * predict_object\n",
     "        noobject_loss = tf.reduce_mean(\n",
     "            tf.reduce_sum(tf.square(noobject_delta),axis=[1,2,3]),\n",
     "            name='noobject_loss') * noobject_scale\n",
     "\n",
-    "        ## TODO tính localization loss\n",
+    "        ## Tính localization loss\n",
     "        box_mask = tf.expand_dims(object_mask, 4)\n",
     "        box_delta = box_mask * (predict_box_offset - true_box_offset)\n",
     "        box_loss = tf.reduce_mean(\n",
@@ -533,10 +531,7 @@
     "        start_time = time.time()\n",
     "        batch_time = []\n",
     "        for batch in range(len(X_train)//batch_size):\n",
-    "            \n",
-    "            # TODO \n",
     "            # lấy từng batch, forward, backward, cập nhật trọng số theo adam optimizer\n",
-    "            \n",
     "            X_batch = X_train[batch*batch_size:(batch+1)*batch_size, ...]\n",
     "            y_batch = y_train[batch*batch_size:(batch+1)*batch_size, ...]\n",
     "            train_total_loss, train_iou_m,_ = sess.run([loss, iou_metric, train_op], {images:X_batch, labels:y_batch, is_training:True})\n",
